Rearrange main page and menus for mobile

--- a/home/home.html
+++ b/home/home.html
@@ -22,7 +22,7 @@
 
 <body>
     <div class="container">
-        <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1" style="margin-left:65px;">
+        <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-pull-1 col-xs-pull-1" style="margin-left:65px;">
             <nav class="navbar navbar-default navigation-clean">
                 <div class="container-fluid">
                     <div class="navbar-header">
@@ -81,7 +81,7 @@
                             <h3 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;font-size:26px;"><strong>SPECIAL THANKS</strong></h3></div>
                     </div>
                     <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-12 hidden-xs hidden-sm">
                             <div class="row text-center">
     <img src="../assets/img/logo_kingston.jpg" width="100px" style="margin:10px;" />
     <img src="../assets/img/logo_oversea_koreans.jpg" width="170px" style="margin:10px;" />
@@ -93,6 +93,16 @@
                         </div>
                     </div>
                     <div class="right-vertical-divider hidden-xs hidden-sm"></div>
+                    <div class="row">
+                        <div class="col-md-12 hidden-md hidden-lg">
+                            <div class="row text-center">
+    <img src="../assets/img/logo_kingston.jpg" width="70px" style="margin:10px;" />
+    <img src="../assets/img/logo_oversea_koreans.jpg" width="110px" style="margin:10px;" />
+    <img src="../assets/img/logo_hanbok.png" width="70px" style="margin:10px;" />
+    <img src="../assets/img/exhibition_02.png" width="120px" style="margin:10px;" />
+</div>
+                        </div>
+                    </div>
                     <div class="horizontal-divider hidden-lg hidden-md"></div>
                 </div>
                 <div class="col-lg-5 col-md-5">
@@ -100,11 +110,19 @@
                         <div class="col-md-12">
                             <h3 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;font-size:26px;"><strong>PARTNERS </strong></h3></div>
                     </div>
-                    <div class="row">
+                    <div class="row hidden-xs hidden-sm">
                         <div class="col-md-12">
                             <div class="row text-center">
     <img src="../assets/img/logo_artrash.png" width="100px" style="margin:10px;" />
     <img src="../assets/img/logo_beondi.jpg" width="170px" style="margin:10px;" />
+</div>
+                        </div>
+                    </div>
+                    <div class="row hidden-md hidden-lg">
+                        <div class="col-md-12">
+                            <div class="row text-center">
+    <img src="../assets/img/logo_artrash.png" width="60px" style="margin:10px;" />
+    <img src="../assets/img/logo_beondi.jpg" width="130px" style="margin:10px;" />
 </div>
                         </div>
                     </div>
