--- a/contact/contact.html
+++ b/contact/contact.html
@@ -22,7 +22,7 @@
 
 <body>
     <div class="container">
-        <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1" style="margin-left:65px;">
+        <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-pull-1 col-xs-pull-1" style="margin-left:65px;">
             <nav class="navbar navbar-default navigation-clean">
                 <div class="container-fluid">
                     <div class="navbar-header">
