--- a/contact/contact.html
+++ b/contact/contact.html
@@ -32,7 +32,7 @@
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="nav navbar-nav navbar-right" style="margin-right:-70px;">
                             <li role="presentation"><a href="../home/home.html" style="font-family:'Open Sans', sans-serif;">HOME </a></li>
-                            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="festival/festival.html" style="font-family:'Open Sans', sans-serif;">FESTIVAL <span class="caret"></span></a>
+                            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="../festival/festival.html" style="font-family:'Open Sans', sans-serif;">FESTIVAL <span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
                                     <li role="presentation"><a href="../festival/festival.html">FESTIVAL </a></li>
                                     <li role="presentation"><a href="../festival/exhibition.html">EXHIBITION </a></li>
