--- a/home/home.html
+++ b/home/home.html
@@ -90,6 +90,14 @@
     <img src="../assets/img/logo_hanbok.png" width="100px" style="margin:10px;" />
     <img src="../assets/img/exhibition_02.png" width="170px" style="margin:10px;" />
 </div>
+                            <div class="row text-center">
+    <img src="../assets/img/logo_seoul.jpg" width="100px" style="margin:10px;" />
+    <img src="../assets/img/logo_hmart.jpg" width="170px" style="margin:10px;" />
+</div>
+                            <div class="row text-center">
+    <img src="../assets/img/logo_panasia.png" width="120px" style="margin:10px;" />
+    <img src="../assets/img/logo_alo_unione.png" width="170px" style="margin:10px;" />
+</div>
                         </div>
                     </div>
                     <div class="right-vertical-divider hidden-xs hidden-sm"></div>
@@ -100,6 +108,10 @@
     <img src="../assets/img/logo_oversea_koreans.jpg" width="110px" style="margin:10px;" />
     <img src="../assets/img/logo_hanbok.png" width="70px" style="margin:10px;" />
     <img src="../assets/img/exhibition_02.png" width="120px" style="margin:10px;" />
+    <img src="../assets/img/logo_seoul.jpg" width="70px" style="margin:10px;" />
+    <img src="../assets/img/logo_hmart.jpg" width="110px" style="margin:10px;" />
+    <img src="../assets/img/logo_panasia.png" width="90px" style="margin:10px;" />
+    <img src="../assets/img/logo_alo_unione.png" width="120px" style="margin:10px;" />
 </div>
                         </div>
                     </div>
