Update a community fest contents

--- a/festival/community.html
+++ b/festival/community.html
@@ -319,23 +319,24 @@
             </div>
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-md-5 col-md-offset-1 col-sm-6" style="padding-left:30px;"><img class="img-responsive" src="../assets/img/festival/participation_06.jpg" style="padding-bottom:10px;">
-                    <p>They will be boys and girls strutting the catwalk, with originals outfits made by recyclable goods- showing the collision of fashion and rubbish for the public to enjoy.‘ArtTrash’ is created by Seyoung Jang, who established ‘ArtTrash’
-                        based in Gwanak-Gu. The artist will be working along with the Environmental Department of Kingston Council, which works towards ‘waste 0’ Scheme. This show is to inspire the youth as well as the old to see the beauty within rubbish
-                        and to put it into good used, as in these day and age we are used to wasting so much! where are all these things can be put to good and create something beautiful and memorable. This show reflects that! </p>
-                    <p>We encourage everyone to join us in this movement, by collecting any trash/rubbish, that they see throughout the event and bring it along to the ‘Market Place’.&nbsp;Children are welcome to join! As the rubbish, you give can be used
-                        as a token in exchange for a face painting or education programmes on the day!
-                        <br />Let’s Get Arty! </p>
+                    <p>There will be boys and girls strutting down the catwalk wearing outfits made from recycledmaterials representing the collaboration of fashion and rubbish for the public to enjoy. </p>
+                    <p>‘ArtTrash’ is created by a Korean artist, Seyoung Jang based in Gwanak-Gu, Seoul. The artistwill be working together with the Environmental Department of Kingston Council, which workstowards ‘waste 0’ Scheme. This show is to inspire
+                        the public to discover the beauty withinrubbish. These days, we are used to wasting so much and this show aims to raise publicawareness how rubbish can be recycled to create something beautiful and memorable. </p>
+                    <p>We encourage everyone to join us in this movement by collecting a piece of rubbish that they seethroughout the day and bring it along to the festival. Children are most welcome to join as theywill be able to use the rubbish as a token
+                        in exchange for face painting or one of the educationprogrammes on the day. </p>
+                    <p>Let’s Get Arty! </p>
                     <div><a href="http://www.artrash.org " target="_blank" style="color:#808080;"><span style="text-decoration: underline;">www.artrash.org</span> </a>
                         <img class="" src="../assets/img/logo_artrash.png" style="width:100px;" />
                     </div>
                 </div>
                 <div class="col-lg-5 col-md-5 col-sm-6" style="padding-left:30px;padding-right:30px;"><img class="img-responsive" src="../assets/img/festival/participation_05.jpg" style="padding-bottom:10px;">
-                    <p>Players aim to keep a heavily weighted shuttlecock (Jaegi) in the air for as long as possible using their bodies except for their hands. (suitable 5+) </p>
-                    <p>Jegichagi is a Korean traditional outdoor game in which players kick a paper jegi into the air and attempt to keep it aloft. A jegi is similar to a shuttlecock, and is made from paper wrapped around a small coin.In Korea, children
-                        usually play alone or with friends in winter seasons, especially on Lunar New Year. Briefly explaining the rules, the player kicks a jegi up in the air and keeps on kicking to prevent from falling to the ground. In a one-to-one
-                        game, a player with the most number of consecutive kicks wins. In a group game, the players stand in a circle, and take turns kicking the Jegi. Players who fail to kick the jegi upon receiving it and let it drop to the ground lose.
-                        As a penalty, the loser tosses the jegi at the winner so that he can kick it as he wishes. When the loser catches the jegi back with his hands, the penalty ends and he can rejoin the game. This has developed, and people combined
-                        two or three materials and made new ways of playing jegichagi. Though the game was traditionally mostly played in winter, it has become a year-round game. </p>
+                    <p>Come along and try playing Jaegichagi. (Suitable 5+) </p>
+                    <p>Jegichagi is a Korean traditional outdoor game in which players kick a paper jegi into the air andattempt to keep it aloft using their feet. A jegi is similar to a shuttlecock, and is made from paperwrapped around a small coin. In
+                        Korea, children usually play alone or with friends in winterseasons, especially on Lunar New Year. </p>
+                    <p>Briefly explaining the rules, the player kicks a jegi up in the air and keeps on kicking to prevent itfrom falling to the ground. In a one-to- one game, a player with the most number of consecutivekicks wins. In a group game, the players
+                        stand in a circle, and take turns in kicking the Jegi.Players who fail to kick the jegi upon receiving it and let it drop to the ground lose. As a penalty,the loser tosses the jegi at the winner so that he can kick it as he wishes.
+                        When the loser catchesthe jegi back with his hands, the penalty ends and he can rejoin the game. This has developed,and people combined two or three materials and made new ways of playing jegichagi. Thoughthe game was traditionally
+                        mostly played in winter, it has become a year-round game. </p>
                 </div>
             </div>
             <div class="row">
@@ -356,8 +357,8 @@
     <h5 style="display: inline; ">by Buddhist artist, Beob Jeon </h5>
     <img src="../assets/img/participation_buddhist.jpg" class="img-circle" style="width:100px;" />
 </div>
-                    <p>Since 20010, Beob Jeon, a Buddhist artist, has been a very active member of Korean Artist Association in the UK and participated in various exhibition in Korea and the UK. She won prize from Grand Art Exhibition of Korean Buddhism
-                        and has a license holder of painting of Cultural Assets Technician. </p>
+                    <p>Since 2010, Beob Jeon, a Buddhist artist, has been a very active member of Korean ArtistAssociation in the UK and participated in various exhibition in Korea and the UK. She won prizefrom Grand Art Exhibition of Korean Buddhism and
+                        has a license holder of painting of CulturalAssets Technician. </p>
                 </div>
             </div>
             <div class="row">
@@ -367,29 +368,29 @@
             </div>
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-md-5 col-md-offset-1 col-sm-6" style="padding-right:30px;padding-left:30px;"><img class="img-responsive" src="../assets/img/festival/participation_03.jpg" style="padding-bottom:10px;">
-                    <p>Find an experience stall for Hanbok for children&nbsp;aged from 9 to 15.&nbsp;Why not try them on and take picture!&nbsp;Hanbok is the prepresentative example of traditional Korean dress. It is known for its vibrant colours and simple
-                        lines withough pockets. There are hanbok for children. </p>
-                    <p>All is welcome, shapes and sizes to try on traditional Hanboks. For people who do not know what is a Korean hanbok: It is traditional dress originated from&nbsp;Korea. Traditionally, people used to wear it every day, but nowadays Hanbok
-                        is traditional wore during special occasions, such as festivals or special anniversaries. Even though they're wearing for special occasions they are also worn for fun days out with friends and family around the palaces on a normal
-                        day out in South Korea. So, everyone can wear it! Whatever the occasion! We will be having a stall where boys and girls can dress themselves up in fancy beautiful hanboks and become Korean Princess and Prince&nbsp;for the day.
-                        They will be a photo booth provided, where you and your friends can take memorable photos in your gowns and show off your Hanbok. Don’t be shy and come along! </p>
+                    <p>There will a stall where children aged from 9 to 15 can dress themselves up in beautiful Hanbokand perhaps imagine what it would’ve been like to be Korean princess or the Kings for a day.There will also be a photo booth, where you
+                        and your friends can take memorable photos toshow off your Hanbok. </p>
+                    <p>Hanbok is the traditional attire of the Korean people, worn daily up until just 100 years ago.These days it is generally only worn on festive occasions or special anniversaries. Even thoughHanbok is not worn on a daily basis anymore,
+                        Korean people have been increasingly wearingHanbok for fun days out with friends and family especially when visiting Korean historic placessuch as the royal palaces. So you can say Hanbok is for everyone for whatever the occasion
+                        itmight be. </p>
                 </div>
                 <div class="col-lg-5 col-md-5 col-sm-6" style="padding-right:30px;padding-left:30px;"><img class="img-responsive" src="../assets/img/festival/participation_04.jpg" style="padding-bottom:10px;">
-                    <p>Dol is a Korean tradition that celebrates the first birthday of a baby. This ceremony blesses the child with a prosperous future and has taken on great significance in Korea. </p>
-                    <p>Doljabee is the highlight of the Dol. The child is placed in front of a table of fods and objects.and than child is urged to pick up an object from the table. It is believed the one selected will foretell the child's future. </p>
+                    <p>Families with a baby are welcome to come and experience the ‘Doljabee’ ceremony at thefestival. </p>
+                    <p>‘Dol’ means baby’s first birthday in Korean which is traditionally marked as a big birthday year inKorea and ‘Doljabee’ is the main ceremony of Dol. </p>
+                    <p>For ‘Doljabee’, a ceremony table is prepared with various objects laid on it which symbolisedifferent talents or skills. The birthday baby dressed in the Korean traditional costume (‘Hanbok’)is then invited to grab one of the objects
+                        presented on the ceremony table. The item chosen issaid to predict the baby’s future. Below is the list of the items traditionally used and theirmeanings: </p>
                     <ul>
-                        <li>White long string, thread -&nbsp;Longevity </li>
-                        <li>The four precious things of the study (book, ink, ink stone,&nbsp;brush) - Being smart&nbsp;/ Scholar </li>
-                        <li>Money / Coins -&nbsp;Wealth, Prosperity,&nbsp;Millionaire&nbsp; </li>
-                        <li>Arrow and bow - Police, Army, Becoming an athlete, Being brave&nbsp; </li>
-                        <li>Pouch of five different colours - Lucky </li>
-                        <li>Thread of five different colours - Vibrant life </li>
-                        <li>Thimble, needle cushion, reel of thread, sewing box&nbsp;- Designer, Artist, Good at house work, Household chores </li>
-                        <li>Jujube - Growth of&nbsp;next&nbsp;generation </li>
-                        <li>Rice - Landowner </li>
-                        <li>Mapae (Badge of&nbsp;Royal Secret Agent) -
-                            <br />Civil servant,&nbsp;MPs,&nbsp;Working&nbsp;in the legal circles,&nbsp;Prime Minister&nbsp; </li>
-                        <li>Handheld mirror - Entertainer </li>
+                        <li>Arrow and bow: athlete, solider, police or being brave </li>
+                        <li>Book, ink, ink stone, brush: scholar or being smart </li>
+                        <li>Money: prosperity and wealth </li>
+                        <li>Handheld mirror: entertainer </li>
+                        <li>Jujube fruit: growth of the family </li>
+                        <li>Mapae (Badge of Royal Secret Agent): civil servant, lawyer or politician </li>
+                        <li>Pouch made of five different coloured fabrics: being lucky </li>
+                        <li>Rice: land owner </li>
+                        <li>Needle cushion, reel of thread, thimble: artist, designer, or good housewife </li>
+                        <li>Thread of five different colours: a vibrant life </li>
+                        <li>White long string or thread: longevity </li>
                     </ul>
                     <p> </p>
                 </div>
