--- a/home/home.html
+++ b/home/home.html
@@ -83,20 +83,18 @@
                     <div class="row">
                         <div class="col-md-12 hidden-xs hidden-sm">
                             <div class="row text-center">
-    <img src="../assets/img/logo_kingston.jpg" width="100px" style="margin:10px;" />
-    <img src="../assets/img/logo_oversea_koreans.jpg" width="170px" style="margin:10px;" />
+    <img src="../assets/img/logo_kingston.jpg" width="120px" style="margin:10px;" />
+    <img src="../assets/img/logo_oversea_koreans.jpg" width="190px" style="margin:10px;" />
+    <img src="../assets/img/logo_hanbok.png" width="120px" style="margin:10px;" />
+    <img src="../assets/img/exhibition_02.png" width="190px" style="margin:10px;" />
 </div>
                             <div class="row text-center">
-    <img src="../assets/img/logo_hanbok.png" width="100px" style="margin:10px;" />
-    <img src="../assets/img/exhibition_02.png" width="170px" style="margin:10px;" />
-</div>
-                            <div class="row text-center">
-    <img src="../assets/img/logo_seoul.jpg" width="100px" style="margin:10px;" />
-    <img src="../assets/img/logo_hmart.jpg" width="170px" style="margin:10px;" />
-</div>
-                            <div class="row text-center">
-    <img src="../assets/img/logo_panasia.png" width="120px" style="margin:10px;" />
-    <img src="../assets/img/logo_alo_unione.png" width="170px" style="margin:10px;" />
+    <img src="../assets/img/logo_seoul.jpg" width="80px" style="margin:10px;" />
+    <img src="../assets/img/logo_hmart.jpg" width="150px" style="margin:10px;" />
+    <img src="../assets/img/logo_panasia.png" width="110px" style="margin:10px;" />
+    <img src="../assets/img/logo_alo_unione.png" width="110px" style="margin:10px;" />
+    <img src="../assets/img/logo_ukzoa.jpg" width="130px" style="margin:10px;" />
+    <img src="../assets/img/logo_greenfarm.jpg" width="130px" style="margin:10px;" />
 </div>
                         </div>
                     </div>
@@ -104,14 +102,16 @@
                     <div class="row">
                         <div class="col-md-12 hidden-md hidden-lg">
                             <div class="row text-center">
-    <img src="../assets/img/logo_kingston.jpg" width="70px" style="margin:10px;" />
-    <img src="../assets/img/logo_oversea_koreans.jpg" width="110px" style="margin:10px;" />
-    <img src="../assets/img/logo_hanbok.png" width="70px" style="margin:10px;" />
-    <img src="../assets/img/exhibition_02.png" width="120px" style="margin:10px;" />
+    <img src="../assets/img/logo_kingston.jpg" width="90px" style="margin:10px;" />
+    <img src="../assets/img/logo_oversea_koreans.jpg" width="140px" style="margin:10px;" />
+    <img src="../assets/img/logo_hanbok.png" width="120px" style="margin:10px;" />
+    <img src="../assets/img/exhibition_02.png" width="130px" style="margin:10px;" />
     <img src="../assets/img/logo_seoul.jpg" width="70px" style="margin:10px;" />
     <img src="../assets/img/logo_hmart.jpg" width="110px" style="margin:10px;" />
-    <img src="../assets/img/logo_panasia.png" width="90px" style="margin:10px;" />
-    <img src="../assets/img/logo_alo_unione.png" width="120px" style="margin:10px;" />
+    <img src="../assets/img/logo_panasia.png" width="100px" style="margin:10px;" />
+    <img src="../assets/img/logo_alo_unione.png" width="90px" style="margin:10px;" />
+    <img src="../assets/img/logo_ukzoa.jpg" width="100px" style="margin:10px;" />
+    <img src="../assets/img/logo_greenfarm.jpg" width="100px" style="margin:10px;" />
 </div>
                         </div>
                     </div>
