Added the link for sponsors

--- a/home/home.html
+++ b/home/home.html
@@ -89,12 +89,24 @@
     <img src="../assets/img/exhibition_02.png" width="190px" style="margin:10px;" />
 </div>
                             <div class="row text-center">
-    <img src="../assets/img/logo_seoul.jpg" width="80px" style="margin:10px;" />
-    <img src="../assets/img/logo_hmart.jpg" width="150px" style="margin:10px;" />
-    <img src="../assets/img/logo_panasia.png" width="110px" style="margin:10px;" />
-    <img src="../assets/img/logo_alo_unione.png" width="110px" style="margin:10px;" />
-    <img src="../assets/img/logo_ukzoa.jpg" width="130px" style="margin:10px;" />
-    <img src="../assets/img/logo_greenfarm.jpg" width="130px" style="margin:10px;" />
+    <a href="http://www.sr4u.co.uk/" target="_blank">
+        <img src="../assets/img/logo_seoul.jpg" width="80px" style="margin:10px;" />
+    </a>
+    <a href="https://hmart.co.uk/" target="_blank">
+        <img src="../assets/img/logo_hmart.jpg" width="150px" style="margin:10px;" />
+    </a>
+    <a href="http://www.panasiagb.com/" target="_blank">
+        <img src="../assets/img/logo_panasia.png" width="110px" style="margin:10px;" />
+    </a>
+    <a href="http://www.uni1trading.co.uk/" target="_blank">
+        <img src="../assets/img/logo_alo_unione.png" width="110px" style="margin:10px;" />
+    </a>
+    <a href="https://www.ukzoa.com/" target="_blank">
+        <img src="../assets/img/logo_ukzoa.jpg" width="130px" style="margin:10px;" />
+    </a>
+    <a href="http://www.greenfarmuk.com/" target="_blank">
+        <img src="../assets/img/logo_greenfarm.jpg" width="130px" style="margin:10px;" />
+    </a>
 </div>
                         </div>
                     </div>
@@ -106,12 +118,24 @@
     <img src="../assets/img/logo_oversea_koreans.jpg" width="140px" style="margin:10px;" />
     <img src="../assets/img/logo_hanbok.png" width="120px" style="margin:10px;" />
     <img src="../assets/img/exhibition_02.png" width="130px" style="margin:10px;" />
-    <img src="../assets/img/logo_seoul.jpg" width="70px" style="margin:10px;" />
-    <img src="../assets/img/logo_hmart.jpg" width="110px" style="margin:10px;" />
-    <img src="../assets/img/logo_panasia.png" width="100px" style="margin:10px;" />
-    <img src="../assets/img/logo_alo_unione.png" width="90px" style="margin:10px;" />
-    <img src="../assets/img/logo_ukzoa.jpg" width="100px" style="margin:10px;" />
-    <img src="../assets/img/logo_greenfarm.jpg" width="100px" style="margin:10px;" />
+    <a href="http://www.sr4u.co.uk/" target="_blank">
+        <img src="../assets/img/logo_seoul.jpg" width="70px" style="margin:10px;" />
+    </a>
+    <a href="https://hmart.co.uk/" target="_blank">
+        <img src="../assets/img/logo_hmart.jpg" width="110px" style="margin:10px;" />
+    </a>
+    <a href="http://www.panasiagb.com/" target="_blank">
+        <img src="../assets/img/logo_panasia.png" width="100px" style="margin:10px;" />
+    </a>
+    <a href="http://www.uni1trading.co.uk/" target="_blank">
+        <img src="../assets/img/logo_alo_unione.png" width="90px" style="margin:10px;" />
+    </a>
+    <a href="https://www.ukzoa.com/" target="_blank">
+        <img src="../assets/img/logo_ukzoa.jpg" width="100px" style="margin:10px;" />
+    </a>
+    <a href="http://www.greenfarmuk.com/" target="_blank">
+        <img src="../assets/img/logo_greenfarm.jpg" width="100px" style="margin:10px;" />
+    </a>
 </div>
                         </div>
                     </div>
