--- a/home/home.html
+++ b/home/home.html
@@ -88,26 +88,6 @@
     <img src="../assets/img/logo_hanbok.png" width="120px" style="margin:10px;" />
     <img src="../assets/img/exhibition_02.png" width="190px" style="margin:10px;" />
 </div>
-                            <div class="row text-center">
-    <a href="http://www.sr4u.co.uk/" target="_blank">
-        <img src="../assets/img/logo_seoul.jpg" width="80px" style="margin:10px;" />
-    </a>
-    <a href="https://hmart.co.uk/" target="_blank">
-        <img src="../assets/img/logo_hmart.jpg" width="150px" style="margin:10px;" />
-    </a>
-    <a href="http://www.panasiagb.com/" target="_blank">
-        <img src="../assets/img/logo_panasia.png" width="110px" style="margin:10px;" />
-    </a>
-    <a href="http://www.uni1trading.co.uk/" target="_blank">
-        <img src="../assets/img/logo_alo_unione.png" width="110px" style="margin:10px;" />
-    </a>
-    <a href="https://www.ukzoa.com/" target="_blank">
-        <img src="../assets/img/logo_ukzoa.jpg" width="130px" style="margin:10px;" />
-    </a>
-    <a href="http://www.greenfarmuk.com/" target="_blank">
-        <img src="../assets/img/logo_greenfarm.jpg" width="130px" style="margin:10px;" />
-    </a>
-</div>
                         </div>
                     </div>
                     <div class="right-vertical-divider hidden-xs hidden-sm"></div>
@@ -118,24 +98,6 @@
     <img src="../assets/img/logo_oversea_koreans.jpg" width="140px" style="margin:10px;" />
     <img src="../assets/img/logo_hanbok.png" width="120px" style="margin:10px;" />
     <img src="../assets/img/exhibition_02.png" width="130px" style="margin:10px;" />
-    <a href="http://www.sr4u.co.uk/" target="_blank">
-        <img src="../assets/img/logo_seoul.jpg" width="70px" style="margin:10px;" />
-    </a>
-    <a href="https://hmart.co.uk/" target="_blank">
-        <img src="../assets/img/logo_hmart.jpg" width="110px" style="margin:10px;" />
-    </a>
-    <a href="http://www.panasiagb.com/" target="_blank">
-        <img src="../assets/img/logo_panasia.png" width="100px" style="margin:10px;" />
-    </a>
-    <a href="http://www.uni1trading.co.uk/" target="_blank">
-        <img src="../assets/img/logo_alo_unione.png" width="90px" style="margin:10px;" />
-    </a>
-    <a href="https://www.ukzoa.com/" target="_blank">
-        <img src="../assets/img/logo_ukzoa.jpg" width="100px" style="margin:10px;" />
-    </a>
-    <a href="http://www.greenfarmuk.com/" target="_blank">
-        <img src="../assets/img/logo_greenfarm.jpg" width="100px" style="margin:10px;" />
-    </a>
 </div>
                         </div>
                     </div>
@@ -159,6 +121,67 @@
                             <div class="row text-center">
     <img src="../assets/img/logo_artrash.png" width="60px" style="margin:10px;" />
     <img src="../assets/img/logo_beondi.jpg" width="130px" style="margin:10px;" />
+</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
+                    <h1> </h1></div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="horizontal-divider hidden-lg hidden-md"></div>
+                </div>
+                <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h6 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;font-size:24px;"><strong>THANKS TO</strong></h6></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12 hidden-xs hidden-sm">
+                            <div class="row text-center">
+    <a href="http://www.sr4u.co.uk/" target="_blank">
+        <img src="../assets/img/logo_seoul.jpg" width="80px" style="margin:10px;" />
+    </a>
+    <a href="https://hmart.co.uk/" target="_blank">
+        <img src="../assets/img/logo_hmart.jpg" width="150px" style="margin:10px;" />
+    </a>
+    <a href="http://www.panasiagb.com/" target="_blank">
+        <img src="../assets/img/logo_panasia.png" width="110px" style="margin:10px;" />
+    </a>
+    <a href="http://www.uni1trading.co.uk/" target="_blank">
+        <img src="../assets/img/logo_alo_unione.png" width="110px" style="margin:10px;" />
+    </a>
+    <a href="https://www.ukzoa.com/" target="_blank">
+        <img src="../assets/img/logo_ukzoa.jpg" width="130px" style="margin:10px;" />
+    </a>
+    <a href="http://www.greenfarmuk.com/" target="_blank">
+        <img src="../assets/img/logo_greenfarm.jpg" width="130px" style="margin:10px;" />
+    </a>
+</div>
+                        </div>
+                        <div class="col-md-12 hidden-md hidden-lg">
+                            <div class="row text-center">
+    <a href="http://www.sr4u.co.uk/" target="_blank">
+        <img src="../assets/img/logo_seoul.jpg" width="70px" style="margin:10px;" />
+    </a>
+    <a href="https://hmart.co.uk/" target="_blank">
+        <img src="../assets/img/logo_hmart.jpg" width="110px" style="margin:10px;" />
+    </a>
+    <a href="http://www.panasiagb.com/" target="_blank">
+        <img src="../assets/img/logo_panasia.png" width="100px" style="margin:10px;" />
+    </a>
+    <a href="http://www.uni1trading.co.uk/" target="_blank">
+        <img src="../assets/img/logo_alo_unione.png" width="90px" style="margin:10px;" />
+    </a>
+    <a href="https://www.ukzoa.com/" target="_blank">
+        <img src="../assets/img/logo_ukzoa.jpg" width="100px" style="margin:10px;" />
+    </a>
+    <a href="http://www.greenfarmuk.com/" target="_blank">
+        <img src="../assets/img/logo_greenfarm.jpg" width="100px" style="margin:10px;" />
+    </a>
 </div>
                         </div>
                     </div>
