Added the logo for Seoul

--- a/home/home.html
+++ b/home/home.html
@@ -87,6 +87,7 @@
     <img src="../assets/img/logo_oversea_koreans.jpg" width="190px" style="margin:10px;" />
     <img src="../assets/img/logo_hanbok.png" width="120px" style="margin:10px;" />
     <img src="../assets/img/exhibition_02.png" width="190px" style="margin:10px;" />
+    <img src="../assets/img/logo_seoul.png" width="210px" style="margin:0px;" />
 </div>
                         </div>
                     </div>
@@ -98,6 +99,7 @@
     <img src="../assets/img/logo_oversea_koreans.jpg" width="140px" style="margin:10px;" />
     <img src="../assets/img/logo_hanbok.png" width="120px" style="margin:10px;" />
     <img src="../assets/img/exhibition_02.png" width="130px" style="margin:10px;" />
+        <img src="../assets/img/logo_seoul.png" width="160px" style="margin:0px;" />
 </div>
                         </div>
                     </div>
