--- a/home/home.html
+++ b/home/home.html
@@ -78,43 +78,43 @@
                 <div class="col-lg-5 col-lg-offset-1 col-md-5 col-md-offset-1">
                     <div class="row">
                         <div class="col-md-12">
-                            <h3 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;font-size:26px;"><strong>SPECIAL THANKS</strong></h3></div>
+                            <h3 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;font-size:26px;"><strong>SUPPORTED BY</strong></h3></div>
                     </div>
                     <div class="row">
                         <div class="col-md-12 hidden-xs hidden-sm">
                             <div class="row text-center">
-    <img src="../assets/img/logo_kingston.jpg" width="120px" style="margin:10px;" />
-    <img src="../assets/img/logo_oversea_koreans.jpg" width="190px" style="margin:10px;" />
-    <img src="../assets/img/logo_hanbok.png" width="120px" style="margin:10px;" />
-    <img src="../assets/img/exhibition_02.png" width="190px" style="margin:10px;" />
-    <img src="../assets/img/logo_seoul.png" width="210px" style="margin:0px;" />
+    <img src="../assets/img/logo_kingston.jpg" width="90px" style="margin:10px;" />
+    <div style="display:inline-block; max-width:160px; text-align: center; vertical-align: middle;">
+        <img src="../assets/img/logo_oversea_koreans.jpg" width="150px" style="margin:5px;" />
+        <img src="../assets/img/logo_hanbok.png" width="90px" style="margin:5px;" />
+    </div>
 </div>
                         </div>
                     </div>
-                    <div class="right-vertical-divider hidden-xs hidden-sm"></div>
                     <div class="row">
                         <div class="col-md-12 hidden-md hidden-lg">
                             <div class="row text-center">
     <img src="../assets/img/logo_kingston.jpg" width="90px" style="margin:10px;" />
-    <img src="../assets/img/logo_oversea_koreans.jpg" width="140px" style="margin:10px;" />
-    <img src="../assets/img/logo_hanbok.png" width="120px" style="margin:10px;" />
-    <img src="../assets/img/exhibition_02.png" width="130px" style="margin:10px;" />
-        <img src="../assets/img/logo_seoul.png" width="160px" style="margin:0px;" />
+    <div style="display:inline-block; max-width:160px; text-align: center; vertical-align: middle;">
+        <img src="../assets/img/logo_oversea_koreans.jpg" width="150px" style="margin:5px;" />
+        <img src="../assets/img/logo_hanbok.png" width="90px" style="margin:5px;" />
+    </div>
 </div>
                         </div>
                     </div>
+                    <div class="right-vertical-divider hidden-xs hidden-sm"></div>
                     <div class="horizontal-divider hidden-lg hidden-md"></div>
                 </div>
                 <div class="col-lg-5 col-md-5">
                     <div class="row">
                         <div class="col-md-12">
-                            <h3 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;font-size:26px;"><strong>PARTNERS </strong></h3></div>
+                            <h3 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;font-size:26px;"><strong>PARTNERS</strong></h3></div>
                     </div>
                     <div class="row hidden-xs hidden-sm">
                         <div class="col-md-12">
                             <div class="row text-center">
-    <img src="../assets/img/logo_artrash.png" width="100px" style="margin:10px;" />
-    <img src="../assets/img/logo_beondi.jpg" width="170px" style="margin:10px;" />
+    <img src="../assets/img/logo_artrash.png" width="70px" style="margin:10px;" />
+    <img src="../assets/img/logo_beondi.jpg" width="130px" style="margin:10px;" />
 </div>
                         </div>
                     </div>
@@ -126,45 +126,65 @@
 </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
-                    <h1> </h1></div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
                     <div class="horizontal-divider hidden-lg hidden-md"></div>
                 </div>
-                <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
+            </div>
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-md-5 col-md-offset-1">
                     <div class="row">
                         <div class="col-md-12">
-                            <h6 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;font-size:22px;"><strong>THANKS TO</strong></h6></div>
+                            <h3 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;font-size:26px;"><strong>SPECIAL THANKS</strong></h3></div>
                     </div>
                     <div class="row">
                         <div class="col-md-12 hidden-xs hidden-sm">
                             <div class="row text-center">
+    <img src="../assets/img/logo_hanbok.png" width="120px" style="margin:10px;" />
+    <img src="../assets/img/exhibition_02.png" width="190px" style="margin:10px;" />
+</div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12 hidden-md hidden-lg">
+                            <div class="row text-center">
+    <img src="../assets/img/logo_hanbok.png" width="120px" style="margin:10px;" />
+    <img src="../assets/img/exhibition_02.png" width="130px" style="margin:10px;" />
+</div>
+                        </div>
+                    </div>
+                    <div class="right-vertical-divider hidden-xs hidden-sm"></div>
+                    <div class="horizontal-divider hidden-lg hidden-md"></div>
+                </div>
+                <div class="col-lg-5 col-md-5">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h3 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;font-size:26px;"><strong>SPONSORED BY</strong></h3></div>
+                    </div>
+                    <div class="row hidden-xs hidden-sm">
+                        <div class="col-md-12">
+                            <div class="row text-center">
     <a href="http://www.sr4u.co.uk/" target="_blank">
-        <img src="../assets/img/logo_seoul.jpg" width="80px" style="margin:10px;" />
+        <img src="../assets/img/logo_seoul.jpg" width="70px" style="margin:10px;" />
     </a>
     <a href="https://hmart.co.uk/" target="_blank">
-        <img src="../assets/img/logo_hmart.jpg" width="150px" style="margin:10px;" />
+        <img src="../assets/img/logo_hmart.jpg" width="140px" style="margin:10px;" />
     </a>
     <a href="http://www.panasiagb.com/" target="_blank">
-        <img src="../assets/img/logo_panasia.png" width="110px" style="margin:10px;" />
+        <img src="../assets/img/logo_panasia.png" width="100px" style="margin:10px;" />
     </a>
     <a href="http://www.uni1trading.co.uk/" target="_blank">
-        <img src="../assets/img/logo_alo_unione.png" width="110px" style="margin:10px;" />
+        <img src="../assets/img/logo_alo_unione.png" width="100px" style="margin:10px;" />
     </a>
     <a href="https://www.ukzoa.com/" target="_blank">
-        <img src="../assets/img/logo_ukzoa.jpg" width="130px" style="margin:10px;" />
+        <img src="../assets/img/logo_ukzoa.jpg" width="110px" style="margin:10px;" />
     </a>
     <a href="http://www.greenfarmuk.com/" target="_blank">
-        <img src="../assets/img/logo_greenfarm.jpg" width="130px" style="margin:10px;" />
+        <img src="../assets/img/logo_greenfarm.jpg" width="120px" style="margin:10px;" />
     </a>
 </div>
                         </div>
-                        <div class="col-md-12 hidden-md hidden-lg">
+                    </div>
+                    <div class="row hidden-md hidden-lg">
+                        <div class="col-md-12">
                             <div class="row text-center">
     <a href="http://www.sr4u.co.uk/" target="_blank">
         <img src="../assets/img/logo_seoul.jpg" width="70px" style="margin:10px;" />
