Fix Seoul city logo

--- a/home/home.html
+++ b/home/home.html
@@ -86,7 +86,7 @@
     <img src="../assets/img/logo_kingston.jpg" width="90px" style="margin:10px;" />
     <div style="display:inline-block; max-width:160px; text-align: center; vertical-align: middle;">
         <img src="../assets/img/logo_oversea_koreans.jpg" width="150px" style="margin:5px;" />
-        <img src="../assets/img/logo_hanbok.png" width="90px" style="margin:5px;" />
+        <img src="../assets/img/logo_seoul.png" width="130px" style="margin:0px;" />
     </div>
 </div>
                         </div>
@@ -97,7 +97,7 @@
     <img src="../assets/img/logo_kingston.jpg" width="90px" style="margin:10px;" />
     <div style="display:inline-block; max-width:160px; text-align: center; vertical-align: middle;">
         <img src="../assets/img/logo_oversea_koreans.jpg" width="150px" style="margin:5px;" />
-        <img src="../assets/img/logo_hanbok.png" width="90px" style="margin:5px;" />
+        <img src="../assets/img/logo_seoul.png" width="120px" style="margin:0px;" />
     </div>
 </div>
                         </div>
