Adjust the sponsor area

--- a/home/home.html
+++ b/home/home.html
@@ -81,7 +81,7 @@
                             <h3 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;font-size:26px;"><strong>SUPPORTED BY</strong></h3></div>
                     </div>
                     <div class="row">
-                        <div class="col-md-12 hidden-xs hidden-sm">
+                        <div class="col-md-12 hidden-xs hidden-sm" style="margin-bottom:30px;">
                             <div class="row text-center">
     <img src="../assets/img/logo_kingston.jpg" width="90px" style="margin:10px;" />
     <div style="display:inline-block; max-width:160px; text-align: center; vertical-align: middle;">
@@ -102,7 +102,6 @@
 </div>
                         </div>
                     </div>
-                    <div class="right-vertical-divider hidden-xs hidden-sm"></div>
                     <div class="horizontal-divider hidden-lg hidden-md"></div>
                 </div>
                 <div class="col-lg-5 col-md-5">
@@ -117,6 +116,8 @@
     <img src="../assets/img/logo_beondi.jpg" width="130px" style="margin:10px;" />
 </div>
                         </div>
+                        <div class="col-md-12 hidden-xs hidden-sm">
+                            <h1> </h1></div>
                     </div>
                     <div class="row hidden-md hidden-lg">
                         <div class="col-md-12">
@@ -127,6 +128,7 @@
                         </div>
                     </div>
                     <div class="horizontal-divider hidden-lg hidden-md"></div>
+                    <div class="left-vertical-divider hidden-xs hidden-sm"></div>
                 </div>
             </div>
             <div class="row">
@@ -136,7 +138,7 @@
                             <h3 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;font-size:26px;"><strong>SPECIAL THANKS</strong></h3></div>
                     </div>
                     <div class="row">
-                        <div class="col-md-12 hidden-xs hidden-sm">
+                        <div class="col-md-12 hidden-xs hidden-sm" style="margin-bottom:10px;">
                             <div class="row text-center">
     <img src="../assets/img/logo_hanbok.png" width="120px" style="margin:10px;" />
     <img src="../assets/img/exhibition_02.png" width="190px" style="margin:10px;" />
@@ -151,7 +153,6 @@
 </div>
                         </div>
                     </div>
-                    <div class="right-vertical-divider hidden-xs hidden-sm"></div>
                     <div class="horizontal-divider hidden-lg hidden-md"></div>
                 </div>
                 <div class="col-lg-5 col-md-5">
@@ -163,22 +164,23 @@
                         <div class="col-md-12">
                             <div class="row text-center">
     <a href="http://www.sr4u.co.uk/" target="_blank">
-        <img src="../assets/img/logo_seoul.jpg" width="70px" style="margin:10px;" />
+        <img src="../assets/img/logo_seoul.jpg" width="60px" style="margin:10px;" />
     </a>
     <a href="https://hmart.co.uk/" target="_blank">
-        <img src="../assets/img/logo_hmart.jpg" width="140px" style="margin:10px;" />
+        <img src="../assets/img/logo_hmart.jpg" width="100px" style="margin:10px;" />
     </a>
     <a href="http://www.panasiagb.com/" target="_blank">
         <img src="../assets/img/logo_panasia.png" width="100px" style="margin:10px;" />
     </a>
+    <br/>
     <a href="http://www.uni1trading.co.uk/" target="_blank">
-        <img src="../assets/img/logo_alo_unione.png" width="100px" style="margin:10px;" />
+        <img src="../assets/img/logo_alo_unione.png" width="80px" style="margin:10px;" />
     </a>
     <a href="https://www.ukzoa.com/" target="_blank">
-        <img src="../assets/img/logo_ukzoa.jpg" width="110px" style="margin:10px;" />
+        <img src="../assets/img/logo_ukzoa.jpg" width="100px" style="margin:10px;" />
     </a>
     <a href="http://www.greenfarmuk.com/" target="_blank">
-        <img src="../assets/img/logo_greenfarm.jpg" width="120px" style="margin:10px;" />
+        <img src="../assets/img/logo_greenfarm.jpg" width="110px" style="margin:10px;" />
     </a>
 </div>
                         </div>
@@ -207,6 +209,7 @@
 </div>
                         </div>
                     </div>
+                    <div class="left-vertical-divider hidden-xs hidden-sm"></div>
                 </div>
             </div>
             <div class="row">
