Fixed for the vertical line

--- a/home/home.html
+++ b/home/home.html
@@ -81,7 +81,7 @@
                             <h3 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;font-size:26px;"><strong>SUPPORTED BY</strong></h3></div>
                     </div>
                     <div class="row">
-                        <div class="col-md-12 hidden-xs hidden-sm" style="margin-bottom:30px;">
+                        <div class="col-md-12 hidden-xs hidden-sm">
                             <div class="row text-center">
     <img src="../assets/img/logo_kingston.jpg" width="90px" style="margin:10px;" />
     <div style="display:inline-block; max-width:160px; text-align: center; vertical-align: middle;">
@@ -116,7 +116,7 @@
     <img src="../assets/img/logo_beondi.jpg" width="130px" style="margin:10px;" />
 </div>
                         </div>
-                        <div class="col-md-12 hidden-xs hidden-sm">
+                        <div class="col-md-12 hidden-xs hidden-sm" style="height:50px;">
                             <h1> </h1></div>
                     </div>
                     <div class="row hidden-md hidden-lg">
