--- a/home/home.html
+++ b/home/home.html
@@ -102,7 +102,12 @@
 </div>
                         </div>
                     </div>
+                    <div class="row hidden-xs hidden-sm" style="height:20px;">
+                        <div class="col-md-12">
+                            <h1> </h1></div>
+                    </div>
                     <div class="horizontal-divider hidden-lg hidden-md"></div>
+                    <div class="right-vertical-divider hidden-xs hidden-sm"></div>
                 </div>
                 <div class="col-lg-5 col-md-5">
                     <div class="row">
@@ -116,8 +121,6 @@
     <img src="../assets/img/logo_beondi.jpg" width="130px" style="margin:10px;" />
 </div>
                         </div>
-                        <div class="col-md-12 hidden-xs hidden-sm" style="height:50px;">
-                            <h1> </h1></div>
                     </div>
                     <div class="row hidden-md hidden-lg">
                         <div class="col-md-12">
@@ -128,7 +131,6 @@
                         </div>
                     </div>
                     <div class="horizontal-divider hidden-lg hidden-md"></div>
-                    <div class="left-vertical-divider hidden-xs hidden-sm"></div>
                 </div>
             </div>
             <div class="row">
@@ -137,7 +139,7 @@
                         <div class="col-md-12">
                             <h3 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;font-size:26px;"><strong>SPECIAL THANKS</strong></h3></div>
                     </div>
-                    <div class="row">
+                    <div class="row" style="margin-bottom:30px;">
                         <div class="col-md-12 hidden-xs hidden-sm" style="margin-bottom:10px;">
                             <div class="row text-center">
     <img src="../assets/img/logo_hanbok.png" width="120px" style="margin:10px;" />
@@ -154,6 +156,7 @@
                         </div>
                     </div>
                     <div class="horizontal-divider hidden-lg hidden-md"></div>
+                    <div class="right-vertical-divider hidden-xs hidden-sm"></div>
                 </div>
                 <div class="col-lg-5 col-md-5">
                     <div class="row">
@@ -209,7 +212,6 @@
 </div>
                         </div>
                     </div>
-                    <div class="left-vertical-divider hidden-xs hidden-sm"></div>
                 </div>
             </div>
             <div class="row">
