--- a/contact/contact.html
+++ b/contact/contact.html
@@ -36,7 +36,7 @@
                                 <ul class="dropdown-menu" role="menu">
                                     <li role="presentation"><a href="../festival/festival.html">FESTIVAL </a></li>
                                     <li role="presentation"><a href="../festival/exhibition.html">EXHIBITION </a></li>
-                                    <li role="presentation"><a href="../festival/community.html">COMMUNITY FEST</a></li>
+                                    <li role="presentation"><a href="../festival/community.html" style="font-family:'Open Sans', sans-serif;">COMMUNITY FEST</a></li>
                                 </ul>
                             </li>
                             <li role="presentation"><a href="../education/education.html" style="font-family:'Open Sans', sans-serif;">EDUCATION </a></li>
