--- a/home/home.html
+++ b/home/home.html
@@ -76,10 +76,10 @@
                     <div class="row">
                         <div class="col-md-12 hidden-xs hidden-sm">
                             <div class="row text-center">
-    <img src="../assets/img/logo_kingston.jpg" width="90px" style="margin:10px;" />
+    <img src="../assets/img/logo_kingston.jpg" width="90px" style="margin:5px;" />
     <div style="display:inline-block; max-width:160px; text-align: center; vertical-align: middle;">
-        <img src="../assets/img/logo_oversea_koreans.jpg" width="150px" style="margin:5px;" />
-        <img src="../assets/img/logo_seoul.png" width="130px" style="margin:0px;" />
+        <img src="../assets/img/logo_oversea_koreans.jpg" width="150px" style="margin:0px;" />
+        <img src="../assets/img/logo_seoul.png" width="160px" style="margin:0px;" />
     </div>
 </div>
                         </div>
@@ -87,10 +87,10 @@
                     <div class="row">
                         <div class="col-md-12 hidden-md hidden-lg">
                             <div class="row text-center">
-    <img src="../assets/img/logo_kingston.jpg" width="90px" style="margin:10px;" />
+    <img src="../assets/img/logo_kingston.jpg" width="90px" style="margin:0px;" />
     <div style="display:inline-block; max-width:160px; text-align: center; vertical-align: middle;">
-        <img src="../assets/img/logo_oversea_koreans.jpg" width="150px" style="margin:5px;" />
-        <img src="../assets/img/logo_seoul.png" width="120px" style="margin:0px;" />
+        <img src="../assets/img/logo_oversea_koreans.jpg" width="150px" style="margin:0px;" />
+        <img src="../assets/img/logo_seoul.png" width="150px" style="margin:0px;" />
     </div>
 </div>
                         </div>
@@ -110,16 +110,24 @@
                     <div class="row hidden-xs hidden-sm">
                         <div class="col-md-12">
                             <div class="row text-center">
-    <img src="../assets/img/logo_artrash.png" width="70px" style="margin:10px;" />
-    <img src="../assets/img/logo_beondi.jpg" width="130px" style="margin:10px;" />
+    <a href="http://www.artrash.org/" target="_blank">
+        <img src="../assets/img/logo_artrash.png" width="70px" style="margin:10px;" />
+    </a>
+    <a href="http://www.beondi.org/" target="_blank">
+        <img src="../assets/img/logo_beondi.jpg" width="130px" style="margin:10px;" />
+    </a>
 </div>
                         </div>
                     </div>
                     <div class="row hidden-md hidden-lg">
                         <div class="col-md-12">
                             <div class="row text-center">
-    <img src="../assets/img/logo_artrash.png" width="60px" style="margin:10px;" />
-    <img src="../assets/img/logo_beondi.jpg" width="130px" style="margin:10px;" />
+    <a href="http://www.artrash.org/" target="_blank">
+        <img src="../assets/img/logo_artrash.png" width="60px" style="margin:10px;" />
+    </a>
+    <a href="http://www.beondi.org/" target="_blank">
+        <img src="../assets/img/logo_beondi.jpg" width="130px" style="margin:10px;" />
+    </a>
 </div>
                         </div>
                     </div>
@@ -132,7 +140,7 @@
                         <div class="col-md-12">
                             <h3 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;font-size:26px;"><strong>SPECIAL THANKS</strong></h3></div>
                     </div>
-                    <div class="row" style="margin-bottom:30px;">
+                    <div class="row">
                         <div class="col-md-12 hidden-xs hidden-sm" style="margin-bottom:10px;">
                             <div class="row text-center">
     <img src="../assets/img/logo_hanbok.png" width="120px" style="margin:10px;" />
