--- a/home/home.html
+++ b/home/home.html
@@ -47,7 +47,8 @@
                 <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
                     <div class="carousel slide" data-ride="carousel" id="carousel-1">
                         <div class="carousel-inner" role="listbox">
-                            <div class="item active"><img class="img-responsive" src="../assets/img/main/home_sliding-banner_01.jpg" alt="Slide Image" style="width:1140px;height:auto;"></div>
+                            <div class="item active"><img class="img-responsive" src="../assets/img/Banner for web_1-02.jpg" alt="Slide Image" style="width:1140px;height:auto;"></div>
+                            <div class="item"><img class="img-responsive" src="../assets/img/main/home_sliding-banner_01.jpg" alt="Slide Image" style="width:1140px;height:auto;"></div>
                             <div class="item"><img class="img-responsive" src="../assets/img/main/home_sliding-banner_02.jpg" alt="Slide Image" style="width:1140px;"></div>
                             <div class="item"><img class="img-responsive" src="../assets/img/main/home_sliding-banner_03.jpg" alt="Slide Image" style="width:1140px;"></div>
                             <div class="item"><img class="img-responsive" src="../assets/img/main/home_sliding-banner_04.jpg" alt="Slide Image" style="width:1140px;"></div>
@@ -59,6 +60,7 @@
                             <li data-target="#carousel-1" data-slide-to="1"></li>
                             <li data-target="#carousel-1" data-slide-to="2"></li>
                             <li data-target="#carousel-1" data-slide-to="3"></li>
+                            <li data-target="#carousel-1" data-slide-to="4"></li>
                         </ol>
                     </div>
                 </div>
